feat: :white_check_mark: Iniciando a web speeck API.

--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
+    <script src="./app/sortMath.js" defer></script>
+    <script src="./app/reconhecimentoVoz.js" defer></script>
     <title>Secret Number</title>
 </head>
 
@@ -21,10 +23,10 @@
     <h1>Acerte o número secreto!</h1>
     <h3>O número secreto está entre <span id="menor-valor">0</span> e <span id="maior-valor">100</span></h3>
     <div id="chute" class="mensagem">
-        <div>Você Disse:</div>
+        <!-- <div>Você Disse:</div>
         <span class="box">20</span>
         <div>O número secreto é maior <i class="fa-solid fa-angles-up"></i></div>
-        <div>O número secreto é menor <i class="fa-solid fa-angles-down"></i></div>
+        <div>O número secreto é menor <i class="fa-solid fa-angles-down"></i></div> -->
     </div>
 </body>
 
