feat: :white_check_mark: Criando arquivo validação, criando funções para verificar se é numero valido e se está dentro das regras.

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <link rel="stylesheet" href="style.css">
     <script src="./app/sortMath.js" defer></script>
     <script src="./app/reconhecimentoVoz.js" defer></script>
+    <script src="./app/validacao.js" defer></script>
     <title>Secret Number</title>
 </head>
 
