--- a/index.html
+++ b/index.html
@@ -23,12 +23,7 @@
 <body>
     <h1>Acerte o número secreto!</h1>
     <h3>O número secreto está entre <span id="menor-valor">0</span> e <span id="maior-valor">100</span></h3>
-    <div id="chute" class="mensagem">
-        <!-- <div>Você Disse:</div>
-        <span class="box">20</span>
-        <div>O número secreto é maior <i class="fa-solid fa-angles-up"></i></div>
-        <div>O número secreto é menor <i class="fa-solid fa-angles-down"></i></div> -->
-    </div>
+    <div id="chute" class="mensagem"></div>
 </body>
 
 </html>
